2007-07-20  Sancho Lerena  <slerena@artica.es>

	* operation/servers/view_server.php: Fixed bug with Data Server lag check

	* operation/agents/tactical.php: Fixed the same bug above.

2007-07-19  Sancho Lerena  <slerena@artica.es>

	* godmode/agentes/agent_manager.php: Fixed problems not really
	fixed in commit 563 (bug 1744913).

	* operation/servers/view_server.php: Fixed Data information are
	now more accurate (before get incorrect data for data server).

	* operation/agentes/tactical.php: Fixed the same that above and
	fixed total nomber of modules for data server that was 0 always :(

2007-07-18  Sancho Lerena  <slerena@artica.es>

        * include/functions_reporting.php: With last change in server, we
        have control of not initilizated modules (those who never got
        data/contact), we need to take care of them here.

        * pandoradb.sql: last_execution_try field is added to
        tagente_estado to be able to keep last execution try from network
        server, later method was incompatible with automatic compatation
        of data and with data server.

        * operation/agentes/estado_grupo.php: Unknown data not includes
        non initialized data. It's possible that need to make changes of
        this kind in other files because the nature of the problem
        detected.

        * operation/agentes/tactical.php: BugFix: LAG is now correct and
        makes reference to the oldest module that has been processed. Also
        are shown non initialized data.


        * operation/servers/view_server.php: BugFix: LAG is now correct
        (see above).

2007-07-16  Sancho Lerena <slerena@gmail.com>

	* include/functions_db.php: Bugfix; list_group and list_group2 funtions
	now include all group in result. All group recheck should be done inside code, not in 
	this function.
	
	* operation/agentes/estado_grupo.php: Fixed bug with ALL group.

	* operation/agentes/estado_monitores.php: Bugfix, Now show only initialized modules.
